0.14.3/_sources/_autosummary/baybe.transformations.basic.CustomTransformation.rst.txt
CustomTransformation
====================

.. currentmodule:: baybe.transformations.basic

.. autoclass:: CustomTransformation
   :members:                              
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~CustomTransformation.__init__
      ~CustomTransformation.abs
      ~CustomTransformation.chain
      ~CustomTransformation.clamp
      ~CustomTransformation.from_dict
      ~CustomTransformation.from_json
      ~CustomTransformation.get_codomain
      ~CustomTransformation.get_image
      ~CustomTransformation.hold_output_left_from
      ~CustomTransformation.hold_output_outside
      ~CustomTransformation.hold_output_right_from
      ~CustomTransformation.hshift
      ~CustomTransformation.negate
      ~CustomTransformation.to_botorch_objective
      ~CustomTransformation.to_dict
      ~CustomTransformation.to_json
      ~CustomTransformation.vshift
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~CustomTransformation.function
   
   